# OpenAnalysis

./: .hgignore  ChangeLog  Copyright.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  Makefile.quick  README  config.doxygen  configure  configure.ac  svn2hg.stamp
src/OpenAnalysis/: Makefile.am  Makefile.in  config.cpp
src/OpenAnalysis/AccessLoc/: AccessLocStandard.cpp  AccessLocStandard.hpp  Interface.hpp  ManagerAccessLocStandard.cpp  ManagerAccessLocStandard.hpp
src/OpenAnalysis/Activity/: ActivePerStmt.cpp  ActivePerStmt.hpp  ActiveStandard.cpp  ActiveStandard.hpp  DepDFSet.cpp  DepDFSet.hpp  DepStandard.cpp  DepStandard.hpp  ICFGDep.cpp  ICFGDep.hpp  InActivePerStmt.cpp  InActivePerStmt.hpp  InterActive.cpp  InterActive.hpp  InterActiveFortran.cpp  InterDep.cpp  InterDep.hpp  InterUseful.hpp  InterVary.hpp  ManagerActiveStandard.cpp  ManagerActiveStandard.hpp  ManagerDepStandard.cpp  ManagerDepStandard.hpp  ManagerEachActive.cpp  ManagerEachActive.hpp  ManagerICFGActive.cpp  ManagerICFGActive.hpp  ManagerICFGDep.cpp  ManagerICFGDep.hpp  ManagerICFGUseful.cpp  ManagerICFGUseful.hpp  ManagerICFGVary.cpp  ManagerICFGVary.hpp  ManagerICFGVaryActive.cpp  ManagerICFGVaryActive.hpp  ManagerICFGVaryInActive.cpp  ManagerICFGVaryInActive.hpp  ManagerInterActive.cpp  ManagerInterActive.hpp  ManagerInterDep.cpp  (+15 more)
src/OpenAnalysis/Alias/: AliasMap.cpp  AliasMap.hpp  EquivSets.cpp  EquivSets.hpp  InterAliasInterface.hpp  InterAliasMap.hpp  Interface.hpp  ManagerAliasMapBasic.cpp  ManagerAliasMapBasic.hpp  ManagerFIAlias.cpp  ManagerFIAlias.hpp  ManagerInsNoPtrInterAliasMap.cpp  ManagerInsNoPtrInterAliasMap.hpp  ManagerInterAliasMapBasic.cpp  ManagerInterAliasMapBasic.hpp  ManagerNoAddressOf.cpp  ManagerNoAddressOf.hpp  ManagerSymAliasSetsBottom.cpp  ManagerSymAliasSetsBottom.hpp  ManagerSymAliasSetsTop.cpp  ManagerSymAliasSetsTop.hpp  NotationGenerator.cpp  SymAliasSets.cpp  SymAliasSets.hpp
src/OpenAnalysis/CFG/: CFG.cpp  CFG.hpp  CFGInterface.hpp  CFGStandard.cpp  CFGStandard.hpp  EachCFGInterface.hpp  EachCFGStandard.hpp  Interface.hpp  ManagerCFGStandard.cpp  ManagerCFGStandard.hpp
src/OpenAnalysis/CSFIActivity/: DUGInterface.hpp  DUGStandard.cpp  DUGStandard.hpp  ManagerDUActive.cpp  ManagerDUActive.hpp  ManagerDUGStandard.cpp  ManagerDUGStandard.hpp
src/OpenAnalysis/CSFSActivity/: DUGStandard.cpp
src/OpenAnalysis/CallGraph/: CallGraph.cpp  CallGraph.hpp  CallGraphStandard.cpp  CallGraphStandard.hpp  Interface.hpp  ManagerCallGraph.cpp  ManagerCallGraph.hpp  ManagerCallGraphStandard.cpp  ManagerCallGraphStandard.hpp
src/OpenAnalysis/DUG/: DUGInterface.hpp  DUGStandard.cpp  DUGStandard.hpp  ManagerDUGStandard.cpp  ManagerDUGStandard.hpp
src/OpenAnalysis/DataFlow/: CFGDFProblem.cpp  CFGDFProblem.hpp  CFGDFSolver.cpp  CallGraphDFProblem.cpp  CallGraphDFProblem.hpp  CallGraphDFProblemNew.cpp  CallGraphDFProblemNew.hpp  CallGraphDFSolver.cpp  CallGraphDFSolver.hpp  CalleeToCallerVisitor.cpp  CalleeToCallerVisitor.hpp  CountDFSet.cpp  CountDFSet.hpp  DGraphIterativeDFP.cpp  DGraphIterativeDFP.hpp  DGraphSolverDFP.hpp  DataFlowSet.hpp  ICFGDFProblem.hpp  ICFGDFSolver.cpp  ICFGDFSolver.hpp  IRHandleDataFlowSet.hpp  LocDFSet.cpp  LocDFSet.hpp  ManagerParamBindings.cpp  ManagerParamBindings.hpp  ParamBindings.cpp  ParamBindings.hpp
src/OpenAnalysis/ExprTree/: CompareExprTree.cpp  CompareExprTree.hpp  DifferentiableLocsVisitor.cpp  DifferentiableLocsVisitor.hpp  EvalToConstVisitor.cpp  EvalToConstVisitor.hpp  EvalToMemRefVisitor.hpp  ExprTree.cpp  ExprTree.hpp  ExprTreeVisitor.hpp  LinearityLocsVisitor.cpp  LinearityLocsVisitor.hpp  MemRefsVisitor.cpp  MemRefsVisitor.hpp  OutputExprTreeVisitor.cpp  OutputExprTreeVisitor.hpp
src/OpenAnalysis/ICFG/: ICFG.cpp  ICFG.hpp  ICFGInterface.hpp  ICFGStandard.cpp  ICFGStandard.hpp  ManagerICFG.cpp  ManagerICFGStandard.cpp  ManagerICFGStandard.hpp
src/OpenAnalysis/IRInterface/: AccessLocIRInterface.hpp  ActivityIRInterface.hpp  AliasIRInterface.hpp  AliasIRInterfaceDefault.hpp  AssignPairIterator.hpp  CFGIRInterface.hpp  CFGIRInterfaceDefault.hpp  CallGraphDFProblemIRInterface.hpp  CallGraphIRInterface.hpp  CalleeToCallerVisitorIRInterface.hpp  ConstValBasicInterface.hpp  ConstValIntInterface.hpp  DUGIRInterface.hpp  EvalToConstVisitorIRInterface.hpp  ExprStmtPairIterator.hpp  ICFGIRInterface.hpp  IRHandles.hpp  InterSideEffectIRInterface.hpp  InterSideEffectIRInterfaceDefault.hpp  LinearityIRInterface.hpp  MPICFGIRInterface.hpp  MREBasicIRShortCircuit.hpp  MREBasicIRShortCircuitDefault.hpp  ParamBindingsIRInterface.hpp  ReachConstsIRInterface.hpp  ReachDefsIRInterface.hpp  SSAIRInterface.hpp  SideEffectIRInterface.hpp  UDDUChainsIRInterface.hpp  XAIFIRInterface.hpp
src/OpenAnalysis/Linearity/: ManagerLinearityStandard.cpp
src/OpenAnalysis/Location/: InvisibleLoc.cpp  LocFieldSubSet.cpp  Location.cpp  Location.hpp  LocationVisitor.hpp
src/OpenAnalysis/MemRefExpr/: LocBlock.cpp  LocBlock.hpp  MemRefExpr.cpp  MemRefExpr.hpp  MemRefExprBasic.cpp  MemRefExprBasic.hpp  MemRefExprVisitor.hpp  mretest.cpp
src/OpenAnalysis/NewExprTree/: NewExprTree.cpp  NewExprTree.hpp  NewExprTreeVisitor.hpp  OutputNewExprTreeVisitor.cpp  OutputNewExprTreeVisitor.hpp
src/OpenAnalysis/OABase/: Annotation.cpp  Annotation.hpp
src/OpenAnalysis/ReachConsts/: InterReachConsts.cpp  InterReachConsts.hpp  Interface.hpp  ManagerICFGReachConstsStandard.cpp  ManagerICFGReachConstsStandard.hpp  ManagerInterReachConsts.cpp  ManagerInterReachConsts.hpp  ManagerReachConstsStandard.cpp  ManagerReachConstsStandard.hpp  ReachConstsStandard.cpp  ReachConstsStandard.hpp
src/OpenAnalysis/ReachDefs/: Interface.hpp  ManagerReachDefsStandard.cpp  ManagerReachDefsStandard.hpp  ReachDefsStandard.cpp  ReachDefsStandard.hpp
src/OpenAnalysis/SSA/: ManagerSSAStandard.cpp  ManagerSSAStandard.hpp  Phi.cpp  Phi.hpp  SSAStandard.cpp  SSAStandard.hpp
src/OpenAnalysis/SideEffect/: InterSideEffectInterface.hpp  InterSideEffectStandard.cpp  InterSideEffectStandard.hpp  ManagerInterSideEffectStandard.cpp  ManagerInterSideEffectStandard.hpp  ManagerSideEffectStandard.cpp  (+4 more)
(+108 files in other folders)
